--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: npm
       - run: npm run lint
   test:
     runs-on: ubuntu-latest
@@ -28,4 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: npm
       - run: npm test
