--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -22,7 +22,8 @@ jobs:
         with:
           node-version: '20'
           cache: npm
-      - run: npm run lint
+      - run: ls -la node_modules/.bin
+      - run: npm run lint:check
   test:
     runs-on: ubuntu-latest
     needs:
