--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "build:image": "cross-env NODE_OPTIONS=--no-experimental-fetch pixi-image-packer-cli resource/image/index.ts -o image --sync",
     "lint:check": "eslint --ignore-pattern lib .",
     "lint": "eslint --ignore-pattern lib --fix .",
     "test": "jest"
@@ -20,12 +21,16 @@
     "@akashic/akashic-engine": "^3.18.2",
     "@types/jest": "^29.5.12",
     "@yasshi2525/jest-environment-akashic": "^0.1.1",
+    "@yasshi2525/pixi-image-packer": "^0.3.5",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.6.0",
     "jest": "^29.7.0",
+    "pixi-filters": "^5.3.0",
+    "pixi.js": "^7.4.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
