--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -27,11 +27,25 @@ jobs:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
       - run: npm run lint:check
+  build:
+    runs-on: ubuntu-latest
+    needs:
+      - setup
+      - lint
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: dependencies-${{ hashFiles('package-lock.json') }}
+      - run: npm run build:image
   test:
     runs-on: ubuntu-latest
     needs:
       - setup
       - lint
+      - build
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
