puppeteer実行時にChromeが存在しない問題を修正

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
+      - run: node node_modules/puppeteer/install.js
       - run: npm run build:image
   test:
     runs-on: ubuntu-latest
