--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -10,12 +10,19 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - uses: actions/cache@v4
-        id: cache-restore
+        id: node-cache-restore
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
       - run: npm ci
-        if: steps.cache-restore.outputs.cache-hit != 'true'
+        if: steps.node-cache-restore.outputs.cache-hit != 'true'
+      - uses: actions/cache@v4
+        id: chrome-cache-restore
+        with:
+          path: /home/runner/.cache/puppeteer
+          key: dependencies-${{ hashFiles('package-lock.json') }}
+      - run: node node_modules/puppeteer/install.js
+        if: steps.chrome-cache-restore.outputs.cache-hit != 'true'
   lint:
     runs-on: ubuntu-latest
     needs: setup
@@ -39,7 +46,11 @@ jobs:
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - run: node node_modules/puppeteer/install.js
+      - uses: actions/cache@v4
+        id: chrome-cache-restore
+        with:
+          path: /home/runner/.cache/puppeteer
+          key: dependencies-${{ hashFiles('package-lock.json') }}
       - run: npm run build:image
   test:
     runs-on: ubuntu-latest
