配布画像ディレクトリ、akashic-lib.jsonのパス誤りを修正

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
-    "lib"
+    "lib",
+    "image",
+    "akashic-lib.json"
   ],
   "scripts": {
     "build": "ts-node build.ts",
