--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@akashic/akashic-cli": "^2.17.18",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.16.1",
-    "@yasshi2525/jest-environment-akashic": "^0.1.3-rc",
+    "@yasshi2525/jest-environment-akashic": "^0.1.3",
     "@yasshi2525/pixi-image-packer": "^0.3.5",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
