puppeteer のインストール方法修正

--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           path: /home/runner/.cache/puppeteer
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - run: node node_modules/puppeteer/install.js
+      - run: node node_modules/puppeteer/install.mjs
         if: steps.chrome-cache-restore.outputs.cache-hit != 'true'
       - uses: actions/cache@v4
         id: image-cache-restore
