単体テスト結果をアーティファクトに追加

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -76,3 +76,11 @@ jobs:
           path: image
           key: image-${{ hashFiles('resource/image/**') }}
       - run: npm test
+      - run: echo "VERSION=$(cat package.json | jq '.version' | tr -d '"')" >> $GITHUB_ENV
+      - run: echo "TIMESTAMP=$(TZ='Asia/Tokyo' date "+%Y%m%d-%H%M%S")" >> $GITHUB_ENV
+      - uses: actions/upload-artifact@v4
+        with:
+          name: yasshi2525-live-on-air-test-result-${{ env.VERSION }}-${{ env.TIMESTAMP }}
+          path:
+            - coverage
+            - tmp/screenshot
