--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:image": "cross-env NODE_OPTIONS=--no-experimental-fetch pixi-image-packer-cli resource/image/index.ts -o image --sync",
     "lint:check": "eslint --ignore-pattern lib .",
     "lint": "eslint --ignore-pattern lib --fix .",
-    "test": "jest"
+    "test": "jest",
+    "watch:image": "cross-env NODE_OPTIONS=--no-experimental-fetch pixi-image-packer-cli resource/image/index.ts -o image --onlyCreate"
   },
   "author": "yasshi2525",
   "license": "MIT",
