--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -82,3 +82,14 @@ jobs:
         with:
           name: yasshi2525-live-on-air-test-result-${{ env.VERSION }}-${{ env.TIMESTAMP }}
           path: tmp
+  doc:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: dependencies-${{ hashFiles('package-lock.json') }}
+      - run: npm run doc:test
