--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -11,32 +11,41 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - uses: actions/cache@v4
+      - name: Restore node_modules
+        uses: actions/cache@v4
         id: node-cache-restore
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
         if: steps.node-cache-restore.outputs.cache-hit != 'true'
-      - uses: actions/cache@v4
+      - name: Restore headless browser
+        uses: actions/cache@v4
         id: chrome-cache-restore
         with:
           path: /home/runner/.cache/puppeteer
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - run: node node_modules/puppeteer/install.mjs
+      - name: Install headless browser
+        run: node node_modules/puppeteer/install.mjs
         if: steps.chrome-cache-restore.outputs.cache-hit != 'true'
-      - uses: actions/cache@v4
+      - name: Restore asset images
+        uses: actions/cache@v4
         id: image-cache-restore
         with:
           path: image
           key: image-${{ hashFiles('resource/image/**') }}
-      - run: npm run build:image
+      - name: Generate asset images
+        run: npm run build:image
         if: steps.image-cache-restore.outputs.cache-hit != 'true'
-      - run: npm run build
-      - run: npm pack
+      - name: Generate library code
+        run: npm run build
+      - name: Package library
+        run: npm pack
       - run: echo "VERSION=$(cat package.json | jq '.version' | tr -d '"')" >> $GITHUB_ENV
       - run: echo "TIMESTAMP=$(TZ='Asia/Tokyo' date "+%Y%m%d-%H%M%S")" >> $GITHUB_ENV
-      - uses: actions/upload-artifact@v4
+      - name: Save library package
+        uses: actions/upload-artifact@v4
         with:
           name: yasshi2525-live-on-air-${{ env.VERSION }}-${{ env.TIMESTAMP }}
           path: yasshi2525-live-on-air-${{ env.VERSION }}.tgz
