--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -9,19 +9,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - uses: actions/cache@v4
+      - name: Restore node_modules
+        uses: actions/cache@v4
         id: node-cache-restore
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
         if: steps.node-cache-restore.outputs.cache-hit != 'true'
-      - uses: actions/cache@v4
+      - name: Restore headless browser
+        uses: actions/cache@v4
         id: chrome-cache-restore
         with:
           path: /home/runner/.cache/puppeteer
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - run: node node_modules/puppeteer/install.mjs
+      - name: Install headless browser
+        run: node node_modules/puppeteer/install.mjs
         if: steps.chrome-cache-restore.outputs.cache-hit != 'true'
   lint:
     runs-on: ubuntu-latest
@@ -29,11 +33,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - uses: actions/cache@v4
+      - name: Restore node_modules
+        uses: actions/cache@v4
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - run: npm run lint:check
+      - name: Lint code
+        run: npm run lint:check
   build:
     runs-on: ubuntu-latest
     needs:
@@ -42,21 +48,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - uses: actions/cache@v4
+      - name: Restore node_modules
+        uses: actions/cache@v4
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - uses: actions/cache@v4
+      - name: Restore headless browser
+        uses: actions/cache@v4
         id: chrome-cache-restore
         with:
           path: /home/runner/.cache/puppeteer
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - uses: actions/cache@v4
+      - name: Restore asset images
+        uses: actions/cache@v4
         id: image-cache-restore
         with:
           path: image
           key: image-${{ hashFiles('resource/image/**') }}
-      - run: npm run build:image
+      - name: Generate asset images
+        run: npm run build:image
         if: steps.image-cache-restore.outputs.cache-hit != 'true'
   test:
     runs-on: ubuntu-latest
@@ -67,18 +77,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - uses: actions/cache@v4
+      - name: Restore node_modules
+        uses: actions/cache@v4
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - uses: actions/cache@v4
+      - name: Restore asset images
+        uses: actions/cache@v4
         with:
           path: image
           key: image-${{ hashFiles('resource/image/**') }}
-      - run: npm test
+      - name: Test code
+        run: npm test
       - run: echo "VERSION=$(cat package.json | jq '.version' | tr -d '"')" >> $GITHUB_ENV
       - run: echo "TIMESTAMP=$(TZ='Asia/Tokyo' date "+%Y%m%d-%H%M%S")" >> $GITHUB_ENV
-      - uses: actions/upload-artifact@v4
+      - name: Save test results
+        uses: actions/upload-artifact@v4
         with:
           name: yasshi2525-live-on-air-test-result-${{ env.VERSION }}-${{ env.TIMESTAMP }}
           path: tmp
@@ -88,8 +102,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - uses: actions/cache@v4
+      - name: Restore node_modules
+        uses: actions/cache@v4
         with:
           path: node_modules
           key: dependencies-${{ hashFiles('package-lock.json') }}
-      - run: npm run doc:test
+      - name: Test documents
+        run: npm run doc:test
