--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript-eslint": "^8.4.0"
   },
   "dependencies": {
+    "@akashic-extension/akashic-timeline": "^3.2.1",
     "@akashic/akashic-engine": "^3.18.2"
   }
 }
