--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "ts-node build.ts",
     "build:image": "cross-env NODE_OPTIONS=--no-experimental-fetch pixi-image-packer-cli resource/image/index.ts -o image --sync",
-    "doc": "typedoc --out tmp/docs src/index.ts",
+    "doc": "typedoc --out tmp/docs --plugin typedoc-github-theme src/index.ts",
     "doc:test": "typedoc --out tmp/docs --validation src/index.ts",
     "lint:check": "eslint .",
     "lint": "eslint --fix .",
@@ -40,6 +40,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typedoc": "^0.26.6",
+    "typedoc-github-theme": "^0.1.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.4.0"
   },
