sample の eslint ルールを強化 + lint

--- a/sample/tsconfig.json
+++ b/sample/tsconfig.json
@@ -8,7 +8,7 @@
   },
   "files": ["node_modules/@akashic/akashic-engine/index.runtime.d.ts"],
   "include": [
-    "_bootstrap.ts",
+    "_bootstrap*.ts",
     "src/**/*.ts"
   ],
 }
