--- a/sample/package.json
+++ b/sample/package.json
@@ -4,13 +4,21 @@
     "@yasshi2525/live-on-air": "file:.."
   },
   "scripts": {
-    "debug": "ts-node debug.ts"
+    "debug": "ts-node debug.ts",
+    "lint:check": "eslint ."
   },
   "devDependencies": {
     "@akashic/akashic-cli": "^2.17.22",
     "@eslint/js": "^9.9.1",
-    "eslint": "^9.9.1",
+    "@stylistic/eslint-plugin": "^2.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
+    "globals": "^15.9.0",
     "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
     "typescript-eslint": "^8.4.0"
   }
 }
