--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "@akashic/akashic-cli": "^2.17.22",
+    "@stylistic/eslint-plugin": "^2.8.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.16.4",
     "@yasshi2525/jest-environment-akashic": "^0.1.4",
