--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "module": "commonjs",
     "strict": true,
+    "noImplicitOverride": true,
     "allowUmdGlobalAccess": true,
     "outDir": "lib"
   },
