package.json CHANGELOG.md を追加

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "files": [
     "lib",
     "image",
-    "akashic-lib.json"
+    "akashic-lib.json",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "build": "ts-node build.ts",
