--- a/package.json
+++ b/package.json
@@ -20,7 +20,18 @@
     "test": "jest",
     "watch:image": "cross-env NODE_OPTIONS=--no-experimental-fetch pixi-image-packer-cli resource/image/index.ts -o image --onlyCreate"
   },
-  "author": "yasshi2525",
+  "homepage": "https://github.com/yasshi2525/live-on-air",
+  "bugs": {
+    "url": "https://github.com/yasshi2525/live-on-air/issues"
+  },
+  "author": {
+    "name": "yasshi2525",
+    "url": "https://x.com/yasshi2525"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yasshi2525/live-on-air.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "@akashic/akashic-cli": "^2.17.22",
