--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -122,6 +122,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+
       - name: Restore node_modules for sample
         uses: actions/cache@v4
         with:
@@ -136,10 +139,7 @@ jobs:
           key: sample-${{ hashFiles('sample/image/**/*', 'sample/src/**/*') }}
 
       - name: Build sample
-        run: |
-          ls -la
-          ls -la ..
-          npm run build
+        run: npm run build
         working-directory: ./sample
         if: steps.sample-restore.outputs.cache-hit != 'true'
 
