--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES6",
+    "lib": ["ES6"],
+    "types": [],
     "declaration": true,
     "module": "commonjs",
     "strict": true,
